add nisreen, remove POC from specialties, plug virtual appts, update address and contact

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" role="navigation">
+  <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light" role="navigation">
     <div class="d-flex flex-nowrap w-auto">
 
   {% if page.url != "/" %}
