--- a/_includes/specialties-menu.html
+++ b/_includes/specialties-menu.html
@@ -3,16 +3,15 @@
     <button class="mdc-button" id="mdc-button-specialty">Choose Specialty</button>
     <div class="mdc-menu mdc-menu-surface">
       <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
-        <a href="#identity" class="page-scroll"><li class="mdc-list-item" role="menuitem">
-          <span class="mdc-list-item__text">Identity</span>
-        </li>
-        <a href="#poc" class="page-scroll"><li class="mdc-list-item" role="menuitem">
-          <span class="mdc-list-item__text">People of Color</span>
-        </li>
+        <a href="#identity" class="page-scroll">
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">Identity</span>
+          </li>
         </a>
-        <a href="#hebrew" class="page-scroll"><li class="mdc-list-item" role="menuitem">
-          <span class="mdc-list-item__text">Hebrew(עברית)</span>
-        </li>
+        <a href="#hebrew" class="page-scroll">
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">Hebrew(עברית)</span>
+          </li>
         </a>
         <a href="#immigration" class="page-scroll">
           <li class="mdc-list-item" role="menuitem">
