--- a/assets/main.scss
+++ b/assets/main.scss
@@ -92,7 +92,8 @@ body {
   position: absolute;
   width: 50%;
   height: 100vh;
-  background: rgba(5, 5 ,5, 0.5);
+  background: linear-gradient(90deg, rgba(0,0,0,0.6015831134564644) 0%, rgba(253,29,29,0) 100%);
+  // background: rgba(5, 5 ,5, 0.5);
   z-index: 1;
 }
 .hero-arrow {
@@ -180,10 +181,10 @@ a#section-two-arrow {
   padding-bottom: 20px;
 }
 .office {
-  height: 600px;
   background: url("/assets/img/DSC01882_crop-website-compressor-1.jpg") no-repeat;
   background-size: cover;
   background-position: center left;
+  height: 700px;
 }
 .box-1 {
   background: url("/assets/img/group.jpg")top left no-repeat;
@@ -243,9 +244,6 @@ a#section-two-arrow {
   width: 200px;
   height:200px;
 }
-// .phone {
-//   text-decoration: underline;
-// }
 #footer {
   text-align: center;
   bottom: 0;
@@ -288,17 +286,21 @@ a#section-two-arrow {
   margin-bottom: 20px;
 }
 .mdc-list-item {
-  height: 35px;
+  padding: 5px;
   color: black;
   &:hover {
     color: $maroon;
   }
 }
-.map {
-  padding-top: 150px;
-}
+// .map {
+//   padding-top: 50px;
+// }
 .contact {
   text-align: center;
+}
+#contact-page-header {
+  padding-top: 100px;
+  justify-content: center;
 }
 /* -------------------------Begin About Page Styles-------------------------------------------*/
 .owner {
@@ -318,11 +320,8 @@ div.mdc-card__media {
 .sary {
   background-image: url("/assets/img/headshots/Sary-1.jpg")
 }
-.rene {
-  background-image: url("/assets/img/headshots/Rene-1.jpg")
-}
-.madison {
-  background-image: url("/assets/img/headshots/Madison-1.jpg")
+.nisreen {
+  background-image: url("/assets/img/headshots/Nisreen-1.jpg")
 }
 .cassandra {
   background-image: url("/assets/img/headshots/Cassandra-1.jpg")
@@ -379,10 +378,10 @@ a {
   &:visited {
       color: $maroon;}
 }
-a,#contact-list {
+#contact-list {
   color: white;
   &:hover {
-      color: grey;}
+      color:black;}
   &:visited {
       color: white;}
 }
@@ -482,6 +481,8 @@ iframe {
   }
   .hero-overlay {
     width: 100%;
+   background: rgba(5, 5 ,5, 0.5);
+
   }
   .front-statement,h2 {
     padding-left: 10px;
@@ -495,6 +496,7 @@ iframe {
   }
   .page-header-2 {
     text-align: center;
+    padding-top: 50px;
   }
   .divider-2 {
     font-size: 15px;
