add logo, add phone, add POC specialties page, remove from sary

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         ">
         <i class="fab fa-facebook-square"></i>
         </a>
-        <span class="credit"><a class="credit" href="http://lesliethe.dev">website by leslie behum</a></span>
+        <span><a id="credit" href="http://lesliethe.dev">website by leslie behum</a></span>
     </div>
     </div>
   </div>
