--- a/_includes/specialties-menu.html
+++ b/_includes/specialties-menu.html
@@ -8,6 +8,11 @@
             <span class="mdc-list-item__text">Identity</span>
           </li>
         </a>
+        <a href="#poc" class="page-scroll">
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">People of Color</span>
+          </li>
+        </a>
         <a href="#hebrew" class="page-scroll">
           <li class="mdc-list-item" role="menuitem">
             <span class="mdc-list-item__text">Hebrew(עברית)</span>
