--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,6 +13,9 @@ body {
   height: 100%;
   background-color: $light-grey;
 }
+div, .dropdown-menu.show {
+  border: 0;
+}
 .wrapper {
   position: relative;
   min-height: 100vh;
@@ -184,7 +187,6 @@ a#section-two-arrow {
   background: url("/assets/img/DSC01882_crop-website-compressor-1.jpg") no-repeat;
   background-size: cover;
   background-position: center left;
-  height: 700px;
 }
 .box-1 {
   background: url("/assets/img/group.jpg")top left no-repeat;
@@ -252,10 +254,10 @@ a#section-two-arrow {
   background-color: $maroon;
   color: white;
 }
-.credit, a:visited {
+#credit, a:visited {
   color: white;
 }
-.credit {
+#credit {
   font-size: 12px;
   color: white;
   padding-left: 5px;
@@ -368,8 +370,12 @@ div.mdc-card__media {
 }
 .fa-arrow-left, .back {
   color: black;
+  font-weight: bold;
   &:hover {
     color: $maroon;}
+  &:visited {
+    color: black;
+  }
 }
 a {
   color: $maroon;
@@ -503,6 +509,7 @@ iframe {
   }
   .office {
     background-position: -50px;
+    height: 600px;
   }
   .contact {
     text-align: left;
