updated copy nisreen employees.yml

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,9 +34,9 @@
   ],
   "address": {
   "@type": "PostalAddress",
-  "addressLocality": "New York",
+  "addressLocality": "Brooklyn",
   "addressRegion": "NY",
-  "streetAddress": "245 W 29th St"
+  "streetAddress": "34 Plaza St. West"
   },
   "description": "Provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQIA++ community.",
   "url": "http://www.rottenbergtherapy.com"
