finish styling new pages, add page-header to specialty.yml for h1 tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,10 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="{% if page.description %}{{ page.description }}{% endif %}">
-  <meta name ="keywords" content="psychotherapy, lgbtq, gay, lesbian, queer, trauma, PTSD, depression, anxiety, nyc, manhattan">
+  <meta name ="keywords" content="psychotherapy, lgbtqia counseling, gay counseling, queer therapist, queer counseling,
+  lgbtqia issues, lgbtqia discrimination, coming out counseling trauma, PTSD, depression, anxiety, nyc, manhattan, bipoc therapist, poc therapist, therapists of color">
   <meta property="og:image" content="http://www.rottenbergtherapy.com/assets/img/hero.jpg" />
-  <meta property="og:site_name" content="Sary Rottenberg Psychotherapy"/>
+  <meta property="og:site_name" content="Rottenberg Therapy"/>
   <meta property="og:title" content="Rottenberg Therapy"/>
   <meta property="og:url" content="http://www.rottenbergtherapy.com"/>
   <meta property="og:type" content="website"/>
