--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,8 @@
             What We Offer
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% link _pages/counseling-for-poc.html %}">Counseling for POC</a>
+            <a class="dropdown-item" href="{% link _pages/lgbtqia-counseling.html %}">LGBTQIA Counseling</a>
             <a class="dropdown-item" href="{% link _pages/specialties.html %}">Specialties</a>
             <a class="dropdown-item" href="{% link _pages/supervision.html %}">Supervision</a>
           </div>
@@ -29,9 +31,6 @@
         <li class="nav-item">
           <a class="nav-link" href="{% link _pages/meet-our-team.html %}">Who We Are</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="">Blog</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" id="contact" href="{% link _pages/contact.html %}">Contact</a>
         </li>
