--- a/assets/main.scss
+++ b/assets/main.scss
@@ -158,6 +158,9 @@ a.fas, .fa-arrow-circle-down {
 .section {
   margin: 0 auto;
 }
+div.section ul {
+  padding-left: 25px !important;
+}
 .front-statement {
   max-width: 1000px;
   padding: 100px;
