--- a/assets/main.scss
+++ b/assets/main.scss
@@ -82,7 +82,6 @@ nav.navbar {
   color: $maroon;
   &:hover {color:black;}
 }
-
 /* ---------------------------Hero Image and Overlay---------------------------*/
 .hero {
   position: relative;
@@ -340,6 +339,9 @@ div.mdc-card__media {
 .nisreen {
   background-image: url("/assets/img/headshots/Nisreen-1.jpg")
 }
+.taylor {
+  background-image: url("/assets/img/headshots/Taylor-1.jpg");
+}
 .cassandra {
   background-image: url("/assets/img/headshots/Cassandra-1.jpg")
 }
@@ -406,10 +408,9 @@ div.mdc-card__media {
 /* ------------------Begin Contact Form-----------------------------------------*/
 p.email-list a {
   font-weight: 400;
-}
-p.email-list a:hover {
-  color: black;
-  font-weight: 600;
+  color: $maroon;
+  transition: ease-in-out .2s;
+  &:hover { color: black; }
 }
 iframe {
    position: relative;
