--- a/assets/main.scss
+++ b/assets/main.scss
@@ -362,6 +362,9 @@ div.mdc-card__media {
 .cassandra {
   background-image: url("/assets/img/headshots/Cassandra-1.jpg")
 }
+.laura {
+  background-image: url("/assets/img/headshots/Laura-1.jpg")
+}
 .team {
   padding-left: 0;
   padding-right: 0;
