fix admin index for blog, add _posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <meta itemprop="name" content="Rottenberg Therapy"/>
   <meta itemprop="url" content="http://www.rottenbergtherapy.com"/>
   <meta itemprop="description" content="Queer Affirmative Psychodynamic Psychotherapy in NYC.  Hebrew Speaking"/>
-
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script>
   // Check that service workers are supported
   if ('serviceWorker' in navigator) {
