first post, style post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,17 @@
 ---
 layout: default
 ---
-
-<h1>{{ page.title }}</h1>
-
+<div class="container">
+  <div class="row">
+    <div id="contact-page-header" class="col-lg-12 col-md-12 col-sm-12">
+     <h1>{{ page.title }}</h1>
+    </div>
 <p>
   {{ page.date | date_to_string }}
 </p>
 
 {{ content }}
+</div>
+</div>
+
+
