--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@ layout: default
      <h1>{{ page.title }}</h1>
     </div>
 <p>
+  {{ page.author }}
   {{ page.date | date_to_string }}
 </p>
-
 {{ content }}
 </div>
 </div>
