--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,6 +39,7 @@ img.poc.woman, img.poc.face, img.poc.bw {
 }
 .full-width-container {
   max-width: 100%;
+padding-bottom: 50px;
 }
 .header {
   padding-top: 100px;
