--- a/assets/main.scss
+++ b/assets/main.scss
@@ -441,6 +441,9 @@ iframe {
    color: white;
 
  }
+h4.page-header-2 a {
+  color: $maroon;
+}
 
 /*------------------------------------------
   Responsive Grid Media Queries - 1280, 1024, 768, 480
