--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,13 @@ layout: default
     </div>
 <p>
 
-  {{ page.date | date_to_string }}
+  {{ page.date | date_to_string }}  {% assign author = site.authors | where: 'name', page.author |
+  first %} {% if author %} - <a href="{{ author.url }}">{{ author.display_name }}</a>
+  {% endif %}
 </p>
+
 {{ content }}
+
 </div>
 </div>
 
