--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
   <div class="row">
     <div id="contact-page-header" class="col-lg-12 col-md-12 col-sm-12">
      <h1>{{ page.title }}</h1>
+      <h3>{{ page.display_name }}</h3> 
     </div>
 <p>
 
