--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,20 +3,20 @@ layout: default
 ---
 <div class="container">
   <div class="row">
-    <div id="contact-page-header" class="col-lg-12 col-md-12 col-sm-12">
-     <h1>{{ page.title }}</h1>
+    <div class="blog-page-header" class="col-lg-12 col-md-12 col-sm-12">
+      <h1>{{ page.title }}</h1>
       <h3>{{ page.display_name }}</h3> 
+      <h4>{{ page.date | date_to_string }}</h4>
     </div>
-<p>
+      <p>
+        {% assign author = site.authors | where: 'name', page.author |
+        first %} {% if author %} - <a href="{{ author.url }}">{{ author.display_name }}</a>
+        {% endif %}
+      </p>
+      {{ content }}
 
-  {{ page.date | date_to_string }}  {% assign author = site.authors | where: 'name', page.author |
-  first %} {% if author %} - <a href="{{ author.url }}">{{ author.display_name }}</a>
-  {% endif %}
-</p>
-
-{{ content }}
-
-</div>
+      <a class="blog-link" href="/blog"><< Back</a>
+  </div>
 </div>
 
 
