--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,8 @@ layout: default
   <div class="row">
     <div class="blog-page-header" class="col-lg-12 col-md-12 col-sm-12">
       <h1>{{ page.title }}</h1>
-      <h3>{{ page.display_name }}</h3> 
-      <h4>{{ page.date | date_to_string }}</h4>
+      <h5>{{ page.date | date_to_string }} by {{ page.author }}</h5>
     </div>
-      <p>
-        {% assign author = site.authors | where: 'name', page.author |
-        first %} {% if author %} - <a href="{{ author.url }}">{{ author.display_name }}</a>
-        {% endif %}
-      </p>
 
       {{ content }}
 
