--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,6 +66,9 @@ padding-bottom: 50px;
 }
 
 /*  ------------------------------ Begin Navigation Bar-------------------------------*/
+.navbar-light .navbar-nav .nav-link {
+  color: black;
+}
 .bg-light {
   background-color: white !important;
 }
