--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,9 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+           <a class="nav-link" href="{% link _pages/blog.html %}">Blog</a>
+        </li>
+        <li>
           <a class="nav-link" href="{% link _pages/services.html %}">Services</a>
         </li>
         <li class="nav-item dropdown">
