fix post layout

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -349,6 +349,9 @@ a.blog-link {
 a.blog-link:visited {
   color: black;
 }
+div.blog-content {
+  padding-top: 50px;
+}
 
 /* -------------------------Begin About Page Styles-------------------------------------------*/
 span > a  {
