--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,16 @@ layout: default
 ---
 <div class="container">
   <div class="row">
-    <div class="blog-page-header" class="col-lg-12 col-md-12 col-sm-12">
+    <div class="blog-page-header col-lg-12 col-md-12 col-sm-12">
       <h1>{{ page.title }}</h1>
       <h5>{{ page.date | date_to_string }} by {{ page.author }}</h5>
     </div>
-
-      {{ content }}
-
-      <a class="blog-link" href="/blog"><< Back</a>
+      <div class="row">
+        <div class="blog-content col-lg-12 col-md-12 col-sm-12">
+                  {{ content }}
+        </div>
+        <a class="blog-link" href="/blog"><< Back</a>
+      </div>
   </div>
 </div>
 
