--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: default
       <h5>{{ page.date | date_to_string }} by {{ page.author }}</h5>
     </div>
       <div class="row">
+            <img class="post-image" src='/assets/{{page.image}}'/>
         <div class="blog-content col-lg-12 col-md-12 col-sm-12">
                   {{ content }}
         </div>
