--- a/assets/main.scss
+++ b/assets/main.scss
@@ -341,6 +341,9 @@ div.blog-page-header {
 div.mdc-card.blog-card {
   padding: 20px;
 }
+.post-image {
+max-width: 800px;
+}
 a.blog-link {
   padding: 25px 0 25px 0;
   color: black;
@@ -349,7 +352,7 @@ a.blog-link:visited {
   color: black;
 }
 div.blog-content {
-  padding-top: 50px;
+  padding: 50px;
 }
 
 /* -------------------------Begin About Page Styles-------------------------------------------*/
