--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{% link _pages/counseling-for-poc.html %}">Counseling for POC</a>
             <a class="dropdown-item" href="{% link _pages/lgbtqia-counseling.html %}">LGBTQIA Counseling</a>
+            <a class="dropdown-item" href="{% link _pages/emdr.html %}">EMDR</a>
             <a class="dropdown-item" href="{% link _pages/specialties.html %}">Specialties</a>
             <a class="dropdown-item" href="{% link _pages/supervision.html %}">Supervision</a>
           </div>
